--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,9 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-us-east-2-120840411982"
+  bucket_name: "elasticbeanstalk-us-east-2-998085235794"
   bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id:
-    secure: "$AWS_ACCESS_KEY"
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
